# helloworld

./: CMakeLists.txt  MAINTAINERS  README.md
conf.d/cmake/: config.cmake
conf.d/packaging/: helloworld.spec
helloworld/: CMakeLists.txt  helloworld.c
